<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/audio_player_height"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_current"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/default_display_time"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:gravity="start" />

        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/iv_replay"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_play_button2_height"
            android:contentDescription="@string/replay"
            app:srcCompat="@drawable/ic_replay_5"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical" />


        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_play_button1_height"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_play_pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:contentDescription="@string/play"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_play_arrow" />

            <ProgressBar
                android:id="@+id/pb_audio_load"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />
        </FrameLayout>

        <ImageView
            android:id="@+id/iv_forward"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_play_button2_height"
            android:contentDescription="@string/forward"
            app:srcCompat="@drawable/ic_forward_5"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/iv_loop"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/control_play_button2_height"
            android:src="@drawable/selector_loop"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/default_display_time"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="end" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_play_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:layout_marginTop="-5dp"
        android:layout_below="@id/control_layout" />

</RelativeLayout>
